# value-ptr-lite

./: .tgitconfig  .travis.yml  BUCK  CHANGES.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-pimpl-widget.cpp  01-pimpl-widget.hpp  01-pimpl.cpp  02-tree.cpp  03-no-exceptions.cpp  04-vp-variant.cpp  BUCK  CMakeLists.txt
include/nonstd/: value_ptr.hpp
project/CodeBlocks/: value-ptr-lite.cbp  value-ptr-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: BUCK  CMakeLists.txt  t.bat  tc-cl.bat  tc.bat  tg.bat  value-ptr-lite.t.cpp  value-ptr-lite.t.hpp  value-ptr-main.t.cpp  value-ptr.t.cpp  value_ptr-main.t.cpp  value_ptr-main.t.hpp  value_ptr.t.cpp
